--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             </div>
             <a href="#about" class="btn-box">More About Me</a>
-            <a href="https://drive.google.com/file/d/19yQP8KiAa50nmoafcdN2qWElFTJGWqSS/view?usp=sharing" class="btn-box">Download CV</a>
+            <a href="https://drive.google.com/file/d/1BnBGpaq0Nk65GqB77u1-BG4vLLR-ycJw/view?usp=drive_link" class="btn-box">Download CV</a>
         </div>
     </section>
 
